packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_breez_liquid.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class FlutterBreezLiquidBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterBreezLiquidBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterBreezLiquidBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  /// Scaffolding functions
  void uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdk(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdk');
  late final _uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdk =
      _uniffi_breez_sdk_liquid_bindings_fn_free_bindingliquidsdkPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listener(
    ffi.Pointer<ffi.Void> ptr,
    int listener,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listener(
      ptr,
      listener,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listenerPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Uint64, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listener');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listener =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_add_event_listenerPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backup(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backup(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backupPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backup');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backup =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_backupPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoin(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoin(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoinPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoin');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoin =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_buy_bitcoinPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_message(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_message(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_messagePtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_message');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_message =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_check_messagePtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnect(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnect(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnect');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnect =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_disconnectPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_rates(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_rates(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_ratesPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_rates');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_rates =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_fiat_ratesPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limits(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limits(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limitsPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limits');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limits =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_lightning_limitsPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limits(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limits(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limitsPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limits');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limits =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_fetch_onchain_limitsPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_info(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_info(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_infoPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_info');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_info =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_get_infoPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currencies(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currencies(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currenciesPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currencies');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currencies =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_fiat_currenciesPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_payments(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_payments(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_paymentsPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_payments');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_payments =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_paymentsPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundables(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_list_refundables(
      ptr,
      out_status,
    );
  }
